04Nov99=======================================================================
1. Removed ~ from the end of the PC18.
03Nov99=======================================================================
1. Simplified command caching so it uses anonymous subroutines, you should
also get error messages back on the console now when developing.
2. Allow locally connected AK1A clusters that for some obscure reason don't
issue PC19s to still appear as connected and allow them to acquire users.
31Oct99=======================================================================
1. updated Minimuf.pm and show/muf.pl to the fixed versions sent to me by
Steve Franke K9AN. 
2. Made set/badnodes work, added show/badnodes. This is an interim fix until
input spot filtering works.
24Oct99=======================================================================
1. fixed announces so that nodes only get one of them (not two).
2. Altered the select timeouts to prevent apparent excessive CPU usage on
multiprocessor machines (or at least that is what seems to be the trouble
here). 
22Oct99=======================================================================
1. allow filter CALLSIGNS to be in upper or lower case.
2. create the concept of input and output filters, input filters are of the 
form "in_$call.pl" eg: "in_g1tlh.pl" (or "in_G1TLH.pl"), output filters are 
"g1tlh.pl" (or "G1TLH.pl").
3. all users can now filter on spots, ann and wwv (assuming the sysop has set
the filters up - still no user creatable filters. Nodes can filter on both
input for announces and output for all of these. I would recommend setting 
up a few filters that are likely to be wanted and then symlinking callsigns
to them as you get requests.
4. added callsign and length of history/position of screen stats to console.
If you want to change the colour of the callsign you will need to copy the
Console.pm to your /spider/local directory and change the $mycallcolor equate.