@@ -1,0 +1,9 @@
+#!/usr/bin/perl -w
+#
+# Database Handler module for DXSpider
+#
+# Copyright (c) 1999 Dirk Koopman G1TLH
+#
+
+
+1;
